@@ -60,6 +60,7 @@ x2goclient (4.0.4.1-0x2go1) UNRELEASED; urgency=low
       arguments.)
     - sshprocess.cpp: add a bit more debugging - also print out the unmodified
       raw output of SSH commands.
+    - onmainwindow.cpp: remove now-bogus double quote escaping.
 
  -- X2Go Release Manager <git-admin@x2go.org>  Tue, 26 May 2015 21:42:09 +0200
 
